new implementation orders status and comunication with client for whatsapp
